# voicecontroledwelder

./: .gitignore  CMakeLists.txt  FLASHING_GUIDE.md  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/src/: adc_control.c  adc_control.h  ble_server.c  ble_server.h  dac_control.c  dac_control.h  main.c  pwm_driver.c  pwm_driver.h  ui_display.c  ui_display.h
